# OptixLog

./: .gitignore  CONTRIBUTING.md  Directional_Coupler_Demo_Notebook.ipynb  EXAMPLES_GUIDE.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MANIFEST.in  MIGRATION_TO_V0.0.4.md  MODERNIZATION_STATUS.md  README.md  demo.py  modernize_examples.py  pyproject.toml  pytest.ini  requirements.txt
Meep Examples/: 3rd-harm-1d.py  absorbed_1d.py  absorbed_power_density.py  absorber-1d.py  antenna_pec_ground_plane.py  bend_flux.py  bent-waveguide.py  binary_grating_analysis.py  binary_grating_hyperparameter_sweep.py  binary_grating_levelset.py  binary_grating_n2f.py  binary_grating_oblique.py  binary_grating_phasemap.py  binary_grating_phasemap_advanced.py  cavity-farfield.py  cavity_arrayslice.py  cherenkov-radiation.py  chirped_pulse.py  coupler.py  cyl-ellipsoid.py  cylinder_cross_section.py  differential_cross_section.py  diffracted_planewave.py  dipole_in_vacuum_1D.py  dipole_in_vacuum_cyl_off_axis.py  dipole_in_vacuum_cyl_on_axis.py  disc_extraction_efficiency.py  disc_radiation_pattern.py  eps_fit_lorentzian.py  extraction_eff_ldos.py  faraday-rotation.py  finite_grating.py  gaussian-beam.py  grating2d_triangular_lattice.py  holey-wvg-bands.py  holey-wvg-cavity.py  material-dispersion.py  metal-cavity-ldos.py  metasurface_lens.py  mie_scattering.py  (+46 more)
Research Paper Examples/Ultrafast Space Time Optical Merons in Momentum Energy Space/dataverse_files/SEM-20230830_CREOL/: CREOL_30degtilt32.tif  CREOL_30degtilt33.tif  CREOL_30degtilt34.tif  CREOL_30degtilt35.tif  CREOL_30degtilt36.tif  CREOL_30degtilt37.tif  CREOL_30degtilt38.tif  CREOL_30degtilt39.tif  (+10 more)
Starter Examples/: optixlog_complete_tutorial.ipynb  optixlog_complete_tutorial.py
Tidy3D Examples/: MZM_Example.ipynb  MetalHeaterPhaseShifter.ipynb  example.py
examples/: 01_quick_start.py  04_absorbed_1d.py  05_bend_flux.py  08_binary_grating_analysis.py  10_mie_sphere_3d.py  12_ring_resonator.py  20_cyl-ellipsoid.py  22_cherenkov-radiation.py  23_dipole_in_vacuum_cyl_off_axis.py  25_mpb_tri_holes.py  28_mpb_bragg.py  29_holey-wvg-bands.py  30_mpb_strip.py  31_gaussian-beam.py  32_differential_cross_section.py  36_polarization_grating.py  40_3rd-harm-1d.py  41_extraction_eff_ldos.py  43_mode_coeff_phase.py  44_absorbed_power_density.py  46_mpb_sq_rods.py  49_metasurface_lens.py  52_refl-angular.py  53_mpb_line_defect.py  54_multilevel-atom.py  56_dipole_in_vacuum_cyl_on_axis.py  57_disc_extraction_efficiency.py  63_binary_grating_n2f.py  67_coupler.py  68_ring-mode-overlap.py  69_mpb_tutorial.py  70_mpb_diamond.py  72_finite_grating.py  73_refl-quartz.py  76_solve-cw.py  81_mie_scattering.py  82_binary_grating_phasemap.py  83_stochastic_emitter.py  84_material-dispersion.py  86_bent-waveguide.py  (+34 more)
sdk/: setup.py
sdk/optixlog/: __init__.py  client.py  helpers.py  query.py  result_types.py  validators.py
tests/: README.md  __init__.py  conftest.py  test_client.py  test_result_types.py  test_validators.py
(+5 files in other folders)
